Paper Wednesday, by Jeff

--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1,27 +1,146 @@
 @article{bezanson2017julia,
-  title={Julia: A fresh approach to numerical computing},
-  author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
-  journal={SIAM review},
-  volume={59},
-  number={1},
-  pages={65--98},
-  year={2017},
-  publisher={SIAM}
+  title     = {Julia: A fresh approach to numerical computing},
+  author    = {Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+  journal   = {SIAM review},
+  volume    = {59},
+  number    = {1},
+  pages     = {65--98},
+  year      = {2017},
+  publisher = {SIAM}
 }
 
-@article{Moore1990,
-	author = {Moore, James T. and Bard, Jonathan F.},
-	doi = {10.1287/opre.38.5.911},
-	issn = {0030-364X},
-	journal = {Operations Research},
-	keywords = {games: noncooperative,integer: branch-and-bound algorithms,programming},
-	mendeley-groups = {bilevel - hierarchical},
-	month = {oct},
-	number = {5},
-	pages = {911--921},
-	publisher = { INFORMS },
-	title = {{The Mixed Integer Linear Bilevel Programming Problem}},
-	url = {http://pubsonline.informs.org/doi/abs/10.1287/opre.38.5.911},
-	volume = {38},
-	year = {1990}
+@misc{richoux2020automatic,
+  primaryclass  = {cs.AI},
+  author        = {Richoux, Florian and Baffier, Jean-François},
+  eprint        = {2002.09811},
+  year          = {2020},
+  url           = {https://arxiv.org/abs/2002.09811},
+  archiveprefix = {arXiv},
+  title         = {Automatic Cost Function Learning with Interpretable Compositional Networks}
+}
+
+@article{richoux2016ghost,
+  pages   = {1-1},
+  author  = {Richoux, Florian and Uriarte, Alberto and Baffier, Jean-François},
+  journal = {IEEE Transactions on Computational Intelligence and AI in Games},
+  title   = {GHOST: A Combinatorial Optimization Framework for RTS-related Problems},
+  number  = {99},
+  doi     = {10.1109/TCIAIG.2016.2573199},
+  year    = {2016},
+  volume  = {PP},
+  annote  = {\small GHOST is a competitive combinatorial optimization framework that a real-time strategy (RTS) AI developer can use to model and solve any problem encoded as a constraint satisfaction/optimization problem (CSP/COP).}
+}
+
+@incollection{cooper2020guidedtour,
+  author    = {Cooper, Martin and Givry, Simon and Schiex, Thomas},
+  title     = {Valued Constraint Satisfaction Problems},
+  booktitle = {A Guided Tour of Artificial Intelligence Research},
+  volume    = {2},
+  pages     = {185-207},
+  publisher = {Springer},
+  year      = {2020}
+}
+
+@inproceedings{codognet2001adaptivesearch,
+  author    = {Codognet, Philippe and Diaz, Daniel},
+  title     = {Yet Another Local Search Method for Constraint Solving},
+  booktitle = {International Symposium on Stochastic Algorithms: Foundations and Applications ({SAGA} 2001)},
+  pages     = {73--90},
+  publisher = {Springer},
+  year      = {2001}
+}
+
+@article{stanley2007cppn,
+  author    = {Stanley, Kenneth O.},
+  title     = {{Compositional Pattern Producing Networks: A Novel Abstraction of Development}},
+  journal   = {{Genetic Programming and Evolvable Machines}},
+  volume    = {8},
+  number    = {2},
+  pages     = {131--162},
+  publisher = {Springer},
+  year      = {2007}
+}
+
+@article{baffier2022interpretable,
+  author  = {Baffier, Jean-François and Chrit, Khalil and Richoux, Florian and Patinho, Pedro and Abreu, Salvador},
+  title   = {Interpretable Composition Networks: A scaling glass-box neural network to learn combinatorial functions},
+  journal = {IJCAI21-DSO Special issue of annals of mathematics and artificial intelligence on Data Science meets Optimization},
+  volume  = {2},
+  year    = {2022}
+}
+
+@software{art_wilde_2021_5110647,
+  author    = {Art Wilde and
+                  Daniel Thiem and
+                  Leo and
+                  Abhinav Gupta and
+                  Andrew Haselgrove and
+                  Daniel Molina and
+                  Honeypot95 and
+                  matago and
+                  Rogerluo and
+                  Valentin Churavy},
+  title     = {Evolutionary.jl},
+  month     = jul,
+  year      = 2021,
+  publisher = {Zenodo},
+  version   = {v0.10.0},
+  doi       = {10.5281/zenodo.5110647},
+  url       = {https://doi.org/10.5281/zenodo.5110647}
+}
+
+@article{DunningHuchetteLubin2017,
+  author  = {Iain Dunning and Joey Huchette and Miles Lubin},
+  title   = {JuMP: A Modeling Language for Mathematical Optimization},
+  journal = {SIAM Review},
+  volume  = {59},
+  number  = {2},
+  pages   = {295-320},
+  year    = {2017},
+  doi     = {10.1137/15M1020575}
+}
+
+@article{MathOptInterface-2021,
+  title     = {MathOptInterface: a data structure for mathematical optimization problems},
+  author    = {Legat, Benoit and Dowson, Oscar and Garcia, Joaquim and Lubin, Miles},
+  journal   = {INFORMS Journal on Computing},
+  year      = {in press},
+  publisher = {INFORMS}
+}
+ 
+@incollection{DBLP:books/sp/18/CodognetMDA18,
+  author    = {Philippe Codognet and
+               Danny Munera and
+               Daniel Diaz and
+               Salvador Abreu},
+  editor    = {Youssef Hamadi and
+               Lakhdar Sais},
+  title     = {Parallel Local Search},
+  booktitle = {Handbook of Parallel Constraint Reasoning},
+  pages     = {381--417},
+  publisher = {Springer},
+  year      = {2018},
+  url       = {https://doi.org/10.1007/978-3-319-63516-3\_10},
+  doi       = {10.1007/978-3-319-63516-3\_10},
+  timestamp = {Sat, 19 Oct 2019 19:02:50 +0200},
+  biburl    = {https://dblp.org/rec/books/sp/18/CodognetMDA18.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{chalumeau2021seapearl,
+  author        = {Chalumeau, Félix and
+               Coulon, Ilan and
+               Cappart, Quentin and
+               Rousseau, Louis-Martin},
+  title         = {SeaPearl: {A} Constraint Programming Solver guided by Reinforcement
+               Learning},
+  journal       = {CoRR},
+  volume        = {abs/2102.09193},
+  year          = {2021},
+  url           = {https://arxiv.org/abs/2102.09193},
+  archiveprefix = {arXiv},
+  eprint        = {2102.09193},
+  timestamp     = {Wed, 24 Feb 2021 15:42:45 +0100},
+  biburl        = {https://dblp.org/rec/journals/corr/abs-2102-09193.bib},
+  bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
