--- a/paper/header.tex
+++ b/paper/header.tex
@@ -1,23 +1,23 @@
 % **************GENERATED FILE, DO NOT EDIT**************
 
-\title{CompositionalNetworks.jl: a scaling glass-box neural network for combinatorial functions learning}
+\title{CompositionalNetworks.jl: a scaling glass-box neural network to learn combinatorial functions}
 
 \author[1]{Jean-François \textsc{Baffier}}
 \author[2]{Khalil \textsc{Chrit}}
 \author[34]{Florian \textsc{Richoux}}
 \author[2]{Pedro \textsc{Patinho}}
 \author[2]{Salvador \textsc{Abreu}}
-\affil[1]{IIJ Innovation Institute, Japan}
+\affil[1]{IIJ, Japan}
 \affil[2]{NOVA-LINCS, University of Évora, Portugal}
 \affil[3]{AIST, Japan}
 \affil[4]{JFLI, CNRS, Japan}
 
-\keywords{Julia, Optimization, Constraint Programming, Neural Network, Scaling Learning}
+\keywords{Julia Language, Constraint Programming, Local Search, Metaheuristics, Neural Network, Metaprogramming, Scalable Machine Learning, Glass-Box Algorithm}
 
 \hypersetup{
-pdftitle = {CompositionalNetworks.jl: a scaling glass-box neural network for combinatorial functions learning},
+pdftitle = {CompositionalNetworks.jl: a scaling glass-box neural network to learn combinatorial functions},
 pdfsubject = {JuliaCon 2019 Proceedings},
 pdfauthor = {Jean-François \textsc{Baffier}, Khalil \textsc{Chrit}, Florian \textsc{Richoux}, Pedro \textsc{Patinho}, Salvador \textsc{Abreu}},
-pdfkeywords = {Julia, Optimization, Constraint Programming, Neural Network, Scaling Learning},
+pdfkeywords = {Julia Language, Constraint Programming, Local Search, Metaheuristics, Neural Network, Metaprogramming, Scalable Machine Learning, Glass-Box Algorithm},
 }
 
