--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -144,3 +144,43 @@
   biburl        = {https://dblp.org/rec/journals/corr/abs-2102-09193.bib},
   bibsource     = {dblp computer science bibliography, https://dblp.org}
 }
+@inproceedings{nethercote2007minizinc,
+  author    = {Nethercote, Nicholas
+and Stuckey, Peter J.
+and Becket, Ralph
+and Brand, Sebastian
+and Duck, Gregory J.
+and Tack, Guido},
+  editor    = {Bessi{\`e}re, Christian},
+  title     = {MiniZinc: Towards a Standard CP Modelling Language},
+  booktitle = {Principles and Practice of Constraint Programming -- CP 2007},
+  year      = {2007},
+  publisher = {Springer Berlin Heidelberg},
+  address   = {Berlin, Heidelberg},
+  pages     = {529--543},
+  abstract  = {There is no standard modelling language for constraint programming (CP) problems. Most solvers have their own modelling language. This makes it difficult for modellers to experiment with different solvers for a problem.},
+  isbn      = {978-3-540-74970-7}
+}
+
+@inproceedings{lattner2004llvm,
+  title        = {LLVM: A compilation framework for lifelong program analysis \& transformation},
+  author       = {Lattner, Chris and Adve, Vikram},
+  booktitle    = {International Symposium on Code Generation and Optimization, 2004. CGO 2004.},
+  pages        = {75--86},
+  year         = {2004},
+  organization = {IEEE}
+}
+@article{baffier2016parametric,
+ pages         = {20 - 36},
+ author        = {Baffier, Jean-François and Suppakitpaisarn, Vorapong and Hiraishi, Hidefumi and Imai, Hiroshi},
+ journal       = {Discrete Optimization},
+ title         = {Parametric multiroute flow and its application to multilink-attack network},
+ doi           = {10.1016/j.disopt.2016.05.002},
+ keywords      = {Graph and network algorithm, Approximation algorithm, Network flow, Network interdiction, Multiroute flow, Parametric optimization},
+ issn          = {1572-5286},
+ note          = {SI: ISCO 2014},
+ year          = {2016},
+ url           = {http://www.sciencedirect.com/science/article/pii/S1572528616300330},
+ volume        = {22},
+ abstract      = {We investigate variants of the max-flow problem in a network under k attacks. The network interdiction problem is to find the minimum max-flow value among (mk) networks that can be obtained by deleting each set of k links. The adaptive network flow problem is to find a flow of the network such that the flow value is maximum against any set of k links attack, when deleting the corresponding flow to those k links in the original flow. First, we prove that max-(k+1)-route flow is a (k+1)-approximation for both problems. Also, we develop a polynomial-time heuristic algorithm for both cases, called the iterative multiroute flow. Then in a second phase, we investigate properties of the function taking the real value h to the max h-route flow value, and apply the result to solve both of the problems. We show that the function is piecewise hyperbolic, and modify a standard parametric optimization technique to find this function. The running time of the algorithm is O(λT), when λ is a source–sink edge connectivity of our network and T the computation time of a max-flow algorithm. We show that for some instances, when h is optimally chosen, the max- h-route flow is an exact solution for both problems.}
+}
